@@ -186,9 +186,8 @@ CONFIG_PLATFORM_GENERIC=y
 # CONFIG_OPT_LIB_FUNCTION is not set
 
 #
-# Definitions for MICROBLAZE0
+# Microblaze is microblaze_0
 #
-CONFIG_KERNEL_BASE_ADDR=0x20000000
 CONFIG_XILINX_MICROBLAZE0_FAMILY="virtex6"
 CONFIG_XILINX_MICROBLAZE0_USE_MSR_INSTR=1
 CONFIG_XILINX_MICROBLAZE0_USE_PCMP_INSTR=1
@@ -197,6 +196,11 @@ CONFIG_XILINX_MICROBLAZE0_USE_DIV=0
 CONFIG_XILINX_MICROBLAZE0_USE_HW_MUL=1
 CONFIG_XILINX_MICROBLAZE0_USE_FPU=0
 CONFIG_XILINX_MICROBLAZE0_HW_VER="8.20.a"
+
+#
+# System memory is mpmc_0
+#
+CONFIG_KERNEL_BASE_ADDR=0x20000000
 
 #
 # Processor type and features
