@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:38:31
+# Today is: Thursday, the 17 of May, 2012; 22:44:59
 #
 # Description: Linux 2.4 Configurations
 #
@@ -268,9 +268,9 @@ define_int CONFIG_XILINX_INTC_0_SPLB_MID_WIDTH 2
 define_int CONFIG_XILINX_INTC_0_SPLB_NATIVE_DWIDTH 32
 define_int CONFIG_XILINX_INTC_0_SPLB_SUPPORT_BURSTS 0
 define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 10
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111110001010100
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111110001010001
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
-define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111110
+define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111011111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
 define_int CONFIG_XILINX_INTC_0_HAS_SIE 1
 define_int CONFIG_XILINX_INTC_0_HAS_CIE 1
@@ -283,12 +283,12 @@ define_string CONFIG_XILINX_INTC_0_INSTANCE xps_intc_0
 # mbref_reg_0_IP2INTC_Irpt
 # xps_iic_0_IIC2INTC_Irpt
 # xps_uart_0_Interrupt
-# PCIe_Bridge_IP2INTC_Irpt
+# fpga_0_xps_ether_0_MDINT_pin
 # xps_ether_0_IP2INTC_Irpt
 # xps_sysace_0_SysACE_IRQ
-# xps_timer_0_Interrupt
+# PCIe_Bridge_IP2INTC_Irpt
 # xps_central_dma_1_IP2INTC_Irpt
-# fpga_0_xps_ether_0_MDINT_pin
+# xps_timer_0_Interrupt
 
 # Timer is xps_timer_0
 define_string CONFIG_XILINX_TIMER_0_FAMILY virtex6
@@ -309,7 +309,7 @@ define_int CONFIG_XILINX_TIMER_0_SPLB_SUPPORT_BURSTS 0
 define_int CONFIG_XILINX_TIMER_0_SPLB_NATIVE_DWIDTH 32
 define_string CONFIG_XILINX_TIMER_0_HW_VER 1.02.a
 define_string CONFIG_XILINX_TIMER_0_INSTANCE xps_timer_0
-define_int CONFIG_XILINX_TIMER_0_Interrupt 2
+define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
 # System memory is mpmc_0
 define_hex CONFIG_XILINX_ERAM_START 0x20000000
