@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:38:34
+ * Today is: Thursday, the 17 of May, 2012; 22:45:01
  *
  * XPS project directory: Xilinx-ML605-MMU-lite-13.2
  */
@@ -46,7 +46,7 @@
 		serial0 = &xps_uart_0;
 	} ;
 	chosen {
-		bootargs = "console=ttyUL0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyUL0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/plb@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -164,7 +164,7 @@
 		PCIe_Bridge: plbv46-pcie@8abf0000 {
 			compatible = "xlnx,plbv46-pcie-4.07.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 5 2 >;
+			interrupts = < 2 2 >;
 			reg = < 0x8abf0000 0x10000 >;
 			xlnx,board = "none";
 			xlnx,class-code = <0x58000>;
@@ -399,7 +399,7 @@
 			device_type = "network";
 			interrupt-parent = <&xps_intc_0>;
 			interrupts = < 4 0 >;
-			local-mac-address = [ 00 0a 35 89 8c 00 ];
+			local-mac-address = [ 00 0a 35 4d 16 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x10000 >;
 			xlnx,duplex = <0x1>;
@@ -522,7 +522,7 @@
 			compatible = "xlnx,xps-intc-2.01.a", "xlnx,xps-intc-1.00.a";
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
-			xlnx,kind-of-intr = <0x54>;
+			xlnx,kind-of-intr = <0x51>;
 			xlnx,num-intr-inputs = <0xa>;
 		} ;
 		xps_sysace_0: sysace@83600000 {
@@ -537,7 +537,7 @@
 		xps_timer_0: system-timer@8aef0000 {
 			compatible = "xlnx,xps-timer-1.02.a", "xlnx,xps-timer-1.00.a";
 			interrupt-parent = <&xps_intc_0>;
-			interrupts = < 2 0 >;
+			interrupts = < 0 0 >;
 			reg = < 0x8aef0000 0x10000 >;
 			xlnx,count-width = <0x20>;
 			xlnx,family = "virtex6";
