@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:38:31
+ * Today is: Thursday, the 17 of May, 2012; 22:44:59
  *
  * Description: U-Boot Configurations
  *
@@ -48,19 +48,19 @@
 /* mbref_reg_0_IP2INTC_Irpt */
 /* xps_iic_0_IIC2INTC_Irpt */
 /* xps_uart_0_Interrupt */
-/* PCIe_Bridge_IP2INTC_Irpt */
+/* fpga_0_xps_ether_0_MDINT_pin */
 /* xps_ether_0_IP2INTC_Irpt */
 /* xps_sysace_0_SysACE_IRQ */
-/* xps_timer_0_Interrupt */
+/* PCIe_Bridge_IP2INTC_Irpt */
 /* xps_central_dma_1_IP2INTC_Irpt */
-/* fpga_0_xps_ether_0_MDINT_pin */
+/* xps_timer_0_Interrupt */
 
 /* System (Timer) Clock Frequency */
 #define XILINX_CLOCK_FREQ                        100000000
 
 /* Timer is xps_timer_0 */
 #define XILINX_TIMER_BASEADDR                    0x8AEF0000
-#define XILINX_TIMER_IRQ                         2
+#define XILINX_TIMER_IRQ                         0
 
 /* System memory is mpmc_0 */
 #define XILINX_RAM_START                         0x20000000
